--- a/lib/plugins/ToolbarPlugin/fontSize.css
+++ b/lib/plugins/ToolbarPlugin/fontSize.css
@@ -22,13 +22,13 @@ input[type="number"] {
 }
 
 .add-icon {
-  background-image: url(/lib/images/icons/add-sign.svg);
+  background-image: url(@public/images/icons/add-sign.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .minus-icon {
-  background-image: url(/lib/images/icons/minus-sign.svg);
+  background-image: url(@public/images/icons/minus-sign.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
