--- a/lib/index.css
+++ b/lib/index.css
@@ -9,9 +9,8 @@
 @import 'https://fonts.googleapis.com/css?family=Reenie+Beanie';
 
 .editor-shell {
-  margin: 20px auto;
+  margin: 20px 0;
   border-radius: 2px;
-  max-width: 1100px;
   color: #000;
   position: relative;
   line-height: 1.7;
@@ -661,7 +660,7 @@ i.page-break,
 }
 
 .dropdown {
-  z-index: 100;
+  z-index: 2000;
   display: block;
   position: fixed;
   box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.2), 0 2px 4px 0 rgba(0, 0, 0, 0.1),
@@ -740,7 +739,7 @@ i.page-break,
   height: 1px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1400px) {
   .dropdown-button-text {
     display: none !important;
   }
@@ -1337,15 +1336,14 @@ button.action-button:disabled {
   display: flex;
   margin-bottom: 1px;
   background: #fff;
-  padding: 4px;
+  padding: 60px 0 0 0;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   vertical-align: middle;
   overflow: auto;
-  height: 36px;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 1102;
 }
 
 button.toolbar-item {
