--- a/lib/plugins/TableCellResizer/index.css
+++ b/lib/plugins/TableCellResizer/index.css
@@ -10,3 +10,9 @@
 .TableCellResizer__resizer {
   position: absolute;
 }
+
+.TableCellResizer__ui {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
